# SmartMPW

./: .gitignore  CMakeLists.txt  ReadMe  SmartMPW.sln  readme.md  readme_English.md
Checker/: Checker.hpp  Checker.vcxproj  Checker.vcxproj.filters  Data.hpp  Main.cpp  Visualizer.hpp  packages.config
Deploy/: BestResult.md  log.csv
Deploy/Instance/: Ln1000r0.txt  Ln1000r20.txt  Ln1000r40.txt  Ln1000r60.txt  Ln1000r80.txt  Ln200r0.txt  Ln200r20.txt  Ln200r40.txt  Ln200r60.txt  Ln200r80.txt  Ln400r0.txt  Ln400r20.txt  Ln400r40.txt  Ln400r60.txt  Ln400r80.txt  Ln600r0.txt  Ln600r20.txt  Ln600r40.txt  Ln600r60.txt  Ln600r80.txt  Ln800r0.txt  Ln800r20.txt  Ln800r40.txt  Ln800r60.txt  Ln800r80.txt  Tn1000r0.txt  Tn1000r20.txt  Tn1000r40.txt  Tn1000r60.txt  Tn1000r80.txt  Tn200r0.txt  Tn200r20.txt  Tn200r40.txt  Tn200r60.txt  Tn200r80.txt  Tn400r0.txt  Tn400r20.txt  Tn400r40.txt  Tn400r60.txt  Tn400r80.txt  (+66 more)
Deploy/Solution/: polygon_area_etc_input_1.html  polygon_area_etc_input_1.txt  polygon_area_etc_input_10.html  polygon_area_etc_input_10.txt  polygon_area_etc_input_2.html  polygon_area_etc_input_2.txt  polygon_area_etc_input_3.html  polygon_area_etc_input_3.txt  polygon_area_etc_input_4.html  polygon_area_etc_input_4.txt  polygon_area_etc_input_5.html  polygon_area_etc_input_5.txt  polygon_area_etc_input_6.html  polygon_area_etc_input_6.txt  polygon_area_etc_input_7.html  (+5 more)
SmartMPW/: AdaptSelect.hpp  Config.hpp  Data.hpp  Instance.hpp  Main.cpp  MpwBinPack.hpp  RandomCase.hpp  SmartMPW.cpp  SmartMPW.vcxproj  SmartMPW.vcxproj.filters  Utils.hpp  Visualizer.hpp
(+30 files in other folders)
